Oclock hour not showing fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Share+Tech+Mono&display=swap');
+
 body {
   margin: 0;
-  font-family: 'Consolas';
+  font-family: 'Share Tech Mono', monospace;
   background: black;
 }
 
@@ -30,7 +32,7 @@ body {
 }
 
 .signature {
-  font-size: 1vw;
+  font-size: 1.5vw;
   bottom: 0;
   right: 0;
   position: fixed;
